<resources>
    <string name="app_name">Quizzer</string>
    <string name="hello">Hello!</string>
    <string name="welcome_to_the_quizzer_app">Welcome to the Quizzer App</string>
    <string name="start">START</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="_1">1</string>
    <string name="play_again">Play Again</string>
    <string name="score">SCORE:</string>
    <string name="textview">questionDispalay2</string>
</resources>